--- a/www/tags.html
+++ b/www/tags.html
@@ -8,10 +8,10 @@
 <meta property="og:url" content="https://aholmes24.shinyapps.io/Rando_Date_Ideas/">
 <meta property="og:title" content="Date Night Generator">
 <meta property="og:description" content="Spice up your life with random date ideas. ">
-<meta property="og:image" content="https://imgur.com/00u1yHf">
+<meta property="og:image" content="https://i.imgur.com/00u1yHf.png">
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://aholmes24.shinyapps.io/Rando_Date_Ideas/">
 <meta property="twitter:title" content="Date Night Generator">
 <meta property="twitter:description" content="Spice up your life with random date ideas. ">
-<meta property="twitter:image" content="https://imgur.com/00u1yHf">
+<meta property="twitter:image" content="https://i.imgur.com/00u1yHf.png">
